Apache Solr Clustering Implementation

Intro:

See http://wiki.apache.org/solr/ClusteringComponent

CHANGES

$Id$
================== Release 4.0.0-dev ==============

(No Changes)

================== Release 3.6.0 ==================

* SOLR-2937: Configuring the number of contextual snippets used for 
  search results clustering. The hl.snippets parameter is now respected
  by the clustering plugin, can be overridden by carrot.summarySnippets
  if needed (Stanislaw Osinski).

* SOLR-2938: Clustering on multiple fields. The carrot.title and 
  carrot.snippet can now take comma- or space-separated lists of
  field names to cluster (Stanislaw Osinski).

* SOLR-2939: Clustering of multilingual search results. The document's
  language field be passed in the carrot.lang parameter, the carrot.lcmap
  parameter enables mapping of language codes to ISO 639 (Stanislaw Osinski).

* SOLR-2940: Passing values for custom Carrot2 fields. The custom field
  mapping are defined using the carrot.custom parameter (Stanislaw Osinski).

* SOLR-2941: NullPointerException on clustering component initialization 
  when schema does not have a unique key field (Stanislaw Osinski).

* SOLR-2942: ClassCastException when passing non-textual fields for 
  clustering (Stanislaw Osinski).

================== Release 3.5.0 ==================

(No Changes)

================== Release 3.4.0 ==================

* SOLR-2706: The carrot.lexicalResourcesDir parameter now works 
  with absolute directories (Stanislaw Osinski)
  
* SOLR-2692: Typo in param name fixed: "carrot.fragzise" changed to 
  "carrot.fragSize" (Stanislaw Osinski).

================== Release 3.3.0 ==================

(No Changes)

================== Release 3.2.0 ==================

* SOLR-2448: Search results clustering updates: bisecting k-means
  clustering algorithm added, loading of Carrot2 stop words from
  <solr.home>/conf/carrot2 (SOLR-2449), using Solr's stopwords.txt